# hometec

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  commands  configure.ac
.cache/bundle1/: bundle.lastmodified
.cache/bundle2/version0.0/: libremote_shell.so.0
.devcontainer/: Dockerfile  devcontainer.json
avro/idl/: com.garani.hometec.api.LedService.avdl
bundles/hometec_api/: CMakeLists.txt  com.garani.hometec.api.LedService.avpr
bundles/hometec_api/include/: led_service.h
bundles/hometec_service/: CMakeLists.txt  libhometec_service.so.1  libhometec_service.so.1.0.0
bundles/hometec_service/src/: HometecActivator.cc  hometec_service_activator.c  led_service_activator.c  led_service_impl.c  led_service_impl.h  turn_command.c  turn_command.h  turn_on_command.c  turn_on_command.h
code/service/: CMakeLists.txt
code/service/src/: main.cpp  statemachine.cpp
conf/: bblayers.conf  local.conf  sanity_info  systemd-conf.bbappend
deploy/hometec/: hometec
deploy/hometec/.cache/bundle1/: bundle.location
deploy/hometec/.cache/bundle1/version0.0/: libshell.so.2
deploy/hometec/.cache/bundle2/: bundle.lastmodified
deploy/hometec/.cache/bundle2/version0.0/: revision.location
deploy/hometec/.cache/bundle3/version0.0/: revision.location
doc/diagram/: component_diagram.md
docker/: Dockerfile  docker-compose.yml
docker/base/: Dockerfile
docker/hometec/: Dockerfile
docker/lightec/: Dockerfile
meta-hometec/recipes-hometec/hometec/hometec/: CMakeLists.txt  main.cpp
meta-hometec/recipes-hometec/hometec/hometec/include/: statemachine.hpp
meta-hometec/recipes-hometec/hometec/hometec/src/: statemachine.cpp
meta-hometec/recipes-hometec/service/: service.bb
meta-hometec/recipes-hometec/service/service/: hometec.sh  statemachine.service
meta-hometec/recipes-hometec/statemachine/: statemachine.bb
meta-hometec/recipes-hometec/statemachine/statemachine/: main.cpp
meta-hometec/recipes-kernel/linux/: custom-raspberrypi.bbappend
meta-hometec/recipes-kernel/linux/custom-raspberry/: custom_raspberrypi.dts
metas/meta-hometec/conf/: layer.conf
metas/meta-hometec/recipes-celix/celix/: celix.bb  celix_2.2.1.bb
metas/meta-hometec/recipes-hometec/hometec/: hometec.bb
metas/meta-hometec/recipes-hometec/hometec-service/: hometec-service.bb
metas/meta-hometec/recipes-hometec/hometec-service/hometec-service/: hometec.sh
src/: hometec.app.src  statemachine.cpp
sys/: Makefile.am  hometec.start.in
yocto/meta-angstrom/recipes-core/systemd/: systemd-conf.bbappend
yocto/meta-angstrom/recipes-core/systemd/systemd-conf/: statemachine.service
yocto/meta-hometec/conf/: layer.conf
yocto/meta-hometec/recipes-core/statemachine/: statemachine.bb
yocto/meta-hometec/recipes-core/statemachine/files/: CMakeLists.txt
yocto/meta-hometec/recipes-hometec/service/: service.bb
yocto/meta-hometec/recipes-hometec/service/service/: statemachine.service  statemachine.sh
yocto/meta-hometec/recipes-hometec/statemachine/: statemachine.bb
